Update formatting of inputs table

--- a/README.adoc
+++ b/README.adoc
@@ -81,15 +81,14 @@ then you can skip the second "setup" step.
 
 Following inputs can be used as `step.with` keys
 
-[%header,width="100%"]
+[%header,cols="<2,<,<2,<3",width="100%"]
 |===
-| Name      | Type   | Default      | Description
-| version   | String | early-access | The JReleaser version to use. +
+| Name              | Type   | Default                 | Description
+| version           | String | early-access            | The JReleaser version to use. +
 Should match any of the link:https://github.com/jreleaser/jreleaser/releases[published releases].
-| arguments | String | full-release | The JReleaser command to run.
+| arguments         | String | full-release            | The JReleaser command to run.
 | working-directory | String | ${{ github.workspace }} | The directory to change into. +
 Defaults to the directory the calling workflow runs in.
-| 
 |===
 
 == Environment Variables
