--- a/README.adoc
+++ b/README.adoc
@@ -27,12 +27,14 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       # Configure build steps as you'd normally do
 
       - name: Setup Java
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v1
         with:
           java-version: 1.8
           server-id: central
@@ -57,7 +59,7 @@ jobs:
       # IMPORTANT!
 
       - name: Setup Java for JReleaser
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v1
         with:
           java-version: 11
 
@@ -69,10 +71,13 @@ jobs:
           JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 ----
 
+WARNING: Note the `fetch-depth: 0` option on the `Checkout` workflow step. It is required for JReleaser to work properly.
+Without that, JReleaser might fail or behave incorrectly.
+
 The last step executes a `full-release` with the default `jreleaser.yml` configuration that's expected
 to be located at the root of the repository.
 
-WARNING: This action requires Java 11+ to download and execute JReleaser. If your project already builds with Java 11+
+IMPORTANT: This action requires Java 11+ to download and execute JReleaser. If your project already builds with Java 11+
 then you can skip the second "setup" step.
 
 == Customizing
