Resolve latest JReleaser release

--- a/README.adoc
+++ b/README.adoc
@@ -89,7 +89,7 @@ Following inputs can be used as `step.with` keys
 [%header,cols="<2,<,<2,<3",width="100%"]
 |===
 | Name              | Type   | Default                 | Description
-| version           | String | early-access            | The JReleaser version to use. +
+| version           | String | latest                  | The JReleaser version to use. +
 Should match any of the link:https://github.com/jreleaser/jreleaser/releases[published releases].
 | arguments         | String | full-release            | The JReleaser command to run.
 | working-directory | String | ${{ github.workspace }} | The directory to change into. +
