Add java-opts argument. Fixes #8

--- a/README.adoc
+++ b/README.adoc
@@ -104,6 +104,7 @@ You may use `latest` to pull the latest stable release or +
 Defaults to the directory the calling workflow runs in.
 | setup-java        | boolean | true                    | Automatically setup a Java runtime. +
 Java runtime defaults to Zulu 17.
+| java-opts         | boolean |                         | Additional JVM parameters for running JReleaser
 |===
 
 == Environment Variables
